orange person changes

--- a/firstPg.html
+++ b/firstPg.html
@@ -16,7 +16,7 @@
         <h5 id="playNameTxt"> Player Name: </h5> <input id="username" type="text" name="uname"><br><br>
         <img  id="greenPerson"  src="personMarkers/greenPerson.png"  onclick="highlightColor('greenPerson')" ></img>
         <img  id="yellowPerson" src="personMarkers/yellowPerson.png" onclick="highlightColor('yellowPerson')" ></img>
-        <img  id="purplePerson"  src="personMarkers/purplePerson.png" onclick="highlightColor('purplePerson')" ></img>
+        <img  id="orangePerson"  src="personMarkers/orangePerson.png" onclick="highlightColor('orangePerson')" ></img>
         <img  id="redPerson"    src="personMarkers/redPerson.png"    onclick="highlightColor('redPerson')" ></img>
         <img  id="pinkPerson"   src="personMarkers/pinkPerson.png"   onclick="highlightColor('pinkPerson')" ></img>
         <img  id="grayPerson"   src="personMarkers/grayPerson.png"   onclick="highlightColor('grayPerson')" ></img>
