--- a/gamePg.html
+++ b/gamePg.html
@@ -37,9 +37,9 @@
       <img id="lgPlayerPiece" draggable="true" ></img><div></div>
 
       <div class="row">
-        <img class="tile " id="left" draggable="true" ></img>
-        <img class="tile " id="middle" draggable="true" ></img>
-        <img class="tile " id="right" draggable="true" ></img>
+        <img class="tile " id="left" draggable="false" ></img>
+        <img class="tile " id="middle" draggable="false" ></img>
+        <img class="tile " id="right" draggable="false" ></img>
 
       </div>
 
