--- a/firstPg.html
+++ b/firstPg.html
@@ -1,5 +1,12 @@
 <html>
 	<head>
+    <meta charset="utf-8"/>
+    <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+    <link href="http://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet" type="text/css">
+
+
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
@@ -7,10 +14,17 @@
 		<link rel="stylesheet" type="text/css" href="siteStyle.css">
 	</head>
    <body>
-      <h1>Tsuro</h1>
-      <h4>Enter your name and select your player color then hit submit. </h4>
-      <h4>After hitting submit wait for all players to join before continuing to the next step in the game.</h4>
-       <br><br>
+      <div id="top" class="header">
+        <h1>Welcome to Tsuro!</h1>
+        <br></br>
+        <div id="instr" style="text-align:left">
+          <p>1) Enter your name</p>
+          <p>2) Select your player color</p>
+          <p>3) Hit submit</p> 
+          <p>4) After hitting submit wait for all players to join before continuing to the next step in the game</p> 
+        </div>
+      </div>
+
       <div class="col-md-3">
         <h2 id="presenthead">Your Details:</h2>
         <h5 id="playNameTxt"> Player Name: </h5> <input id="username" type="text" name="uname"><br><br>
