fixed the stupid error kz (8:31pm)

--- a/gamePg.html
+++ b/gamePg.html
@@ -97,5 +97,22 @@
     <div id="36" class="blanca"  value="vacia" onclick="rotate(36)"> </div>
       
   </div>
+  
+  
+  <div id="turnos">
+    <p></p>
+  </div>
+  <div id="coronadaB">
+
+
+  </div>
+
+
+  <div id="coronadaN">
+
+
+  </div>
+
+
 </body>
 </html>
