super basic chat addition

--- a/gamePg.html
+++ b/gamePg.html
@@ -98,6 +98,16 @@
       
   </div>
   
+  <div id="chatbar">
+    Enter Chat and press enter <br/>
+<!--    <div class="btn-group btn-toggle"> 
+        <button class="btn btn-xs btn-default">ON</button>
+        <button class="btn btn-xs btn-primary active">OFF</button>
+    </div> -->
+    <div><input id=input placeholder=you-chat-here /></div>
+    Chat Output
+    <div id=box class="chatOutput"></div>
+  </div>
   
   <div id="turnos">
     <p></p>
