--- a/gamePg.html
+++ b/gamePg.html
@@ -47,52 +47,52 @@
     </div>
 
   <div id="tablero" >
-    <div id="1" class="blanca" value="vacia" onclick="rotate(1)"></div>
-    <div id="2" class="blanca" value="vacia" onclick="rotate(2)"></div>
-    <div id="3" class="blanca" value="vacia" onclick="rotate(3)"></div>
-    <div id="4" class="blanca"  value="vacia" onclick="rotate(4)"> </div>
-    <div id="5" class="blanca" value="vacia" onclick="rotate(5)"> </div>
-    <div id="6" class="blanca"  value="vacia" onclick="rotate(6)"></div>
+    <div id="1" class="blanca" value="vacia" ></div>
+    <div id="2" class="blanca" value="vacia" ></div>
+    <div id="3" class="blanca" value="vacia" ></div>
+    <div id="4" class="blanca"  value="vacia"></div>
+    <div id="5" class="blanca" value="vacia" ></div>
+    <div id="6" class="blanca"  value="vacia"></div>
 
     <br />
-    <div id="7" class="blanca" value="vacia" onclick="rotate(7)"></div>
-    <div id="8"  class="blanca" value="vacia" onclick="rotate(8)"></div>
-    <div id="9"  class="blanca" value="vacia" onclick="rotate(9)"></div>
-    <div id="10" class="blanca" value="vacia" onclick="rotate(10)"> </div>
-    <div id="11" class="blanca" value="vacia" onclick="rotate(11)"> </div>
-    <div id="12" class="blanca" value="vacia" onclick="rotate(12)"></div>
+    <div id="7" class="blanca" value="vacia"  ></div>
+    <div id="8"  class="blanca" value="vacia" ></div>
+    <div id="9"  class="blanca" value="vacia" ></div>
+    <div id="10" class="blanca" value="vacia" > </div>
+    <div id="11" class="blanca" value="vacia" > </div>
+    <div id="12" class="blanca" value="vacia" ></div>
  
     <br />
-    <div id="13" class="blanca"  value="vacia" onclick="rotate(13)"> </div>
-    <div id="14" class="blanca" value="vacia" onclick="rotate(14)"> </div>
-    <div id="15" class="blanca"  value="vacia" onclick="rotate(15)"> </div>
-    <div id="16" class="blanca" value="vacia" onclick="rotate(16)"> </div>
-    <div id="17" class="blanca"  value="vacia" onclick="rotate(17)"> </div>
-    <div id="18" class="blanca" value="vacia" onclick="rotate(18)"> </div>
+    <div id="13" class="blanca"  value="vacia"></div>
+    <div id="14" class="blanca" value="vacia" ></div>
+    <div id="15" class="blanca"  value="vacia"></div>
+    <div id="16" class="blanca" value="vacia" ></div>
+    <div id="17" class="blanca"  value="vacia"></div>
+    <div id="18" class="blanca" value="vacia" ></div>
 
     <br />
-    <div id="19" class="blanca" value="vacia" onclick="rotate(19)"> </div>
-    <div id="20" class="blanca"  value="vacia" onclick="rotate(20)"> </div>
-    <div id="21" class="blanca" value="vacia" onclick="rotate(21)"> </div>
-    <div id="22" class="blanca"  value="vacia" onclick="rotate(22)"> </div>
-    <div id="23" class="blanca" value="vacia" onclick="rotate(23)"> </div>
-    <div id="24" class="blanca"  value="vacia" onclick="rotate(24)"> </div>
+    <div id="19" class="blanca" value="vacia" ></div>
+    <div id="20" class="blanca"  value="vacia"></div>
+    <div id="21" class="blanca" value="vacia" ></div>
+    <div id="22" class="blanca"  value="vacia"></div>
+    <div id="23" class="blanca" value="vacia" ></div>
+    <div id="24" class="blanca"  value="vacia"></div>
 
     <br />
-    <div id="25" class="blanca"  value="vacia" onclick="rotate(25)"> </div>
-    <div id="26" class="blanca" value="vacia" onclick="rotate(26)"> </div>
-    <div id="27" class="blanca"  value="vacia" onclick="rotate(27)"> </div>
-    <div id="28" class="blanca" value="vacia" onclick="rotate(28)"> </div>
-    <div id="29" class="blanca"  value="vacia" onclick="rotate(29)"> </div>
-    <div id="30" class="blanca" value="vacia" onclick="rotate(30)"> </div>
+    <div id="25" class="blanca"  value="vacia"></div>
+    <div id="26" class="blanca" value="vacia" ></div>
+    <div id="27" class="blanca"  value="vacia"></div>
+    <div id="28" class="blanca" value="vacia" ></div>
+    <div id="29" class="blanca"  value="vacia"></div>
+    <div id="30" class="blanca" value="vacia" ></div>
 
     <br />
-    <div id="31" class="blanca" value="vacia" onclick="rotate(31)"> </div>
-    <div id="32" class="blanca"  value="vacia" onclick="rotate(32)"> </div>
-    <div id="33" class="blanca" value="vacia" onclick="rotate(33)"> </div>
-    <div id="34" class="blanca"  value="vacia" onclick="rotate(34)"> </div>
-    <div id="35" class="blanca" value="vacia" onclick="rotate(35)"> </div>
-    <div id="36" class="blanca"  value="vacia" onclick="rotate(36)"> </div>
+    <div id="31" class="blanca" value="vacia" ></div>
+    <div id="32" class="blanca"  value="vacia"></div>
+    <div id="33" class="blanca" value="vacia" ></div>
+    <div id="34" class="blanca"  value="vacia"></div>
+    <div id="35" class="blanca" value="vacia" ></div>
+    <div id="36" class="blanca"  value="vacia"></div>
       
   </div>
   
