added timer and name color

--- a/gamePg.html
+++ b/gamePg.html
@@ -33,6 +33,7 @@
     <div id="grid">
 
       <img id="lgPlayerPiece" ></img><div></div>
+      <span id="timer" style="color: #f4511e; font-family: Montserrat, sans-serif; font-size: 180%;"></span>
 
       <div class="row">
         <img class="tile " id="left" draggable="false" ></img>
@@ -107,13 +108,8 @@
     <div id="box" class="chatOutput"></div>
   </div>
   
-  <div id="alert">
-    <span>Are you ready?</span>
-    <div>You will have 20 seconds to pick a start spot when this dialogue disappears.</div>
-  </div>
-
   <div id="turnos">
-    <p></p>
+    <p style='color: #f4511e; font-family: Montserrat, sans-serif; font-size: 150%; padding: 5px;'></p>
   </div>
   <div id="coronadaB">
 
