--- a/gamePg.html
+++ b/gamePg.html
@@ -106,9 +106,9 @@
   </div>
   
   <div id="chatbar">
-    <p style='color: #f4511e; font-family: Montserrat, sans-serif; font-size: 100%; text-align: center;'>Enter Chat and press enter</p>
+    <p style='color: #f4511e; font-family: Montserrat, sans-serif; font-size: 100%; text-align: center;'>Group Chat</p>
     <div style='padding: 5px;'>
-      <input id="input" placeholder="you-chat-here">
+      <input id="input" placeholder="message-here">
     </div>
       <p style='color: #f4511e; font-family: Montserrat, sans-serif; font-size: 100%; padding: 5px;'>Chat Output
       </p>
