dragon tile might work? did not actually test it

--- a/gamePg.html
+++ b/gamePg.html
@@ -36,9 +36,9 @@
     <div id="grid">
 
       <img id="lgPlayerPiece" ></img><div></div>
-      <span id="timer" style="color: #f4511e; font-family: Montserrat, sans-serif; font-size: 180%;"></span>
+      <span id="timer" style="color: #f4511e; font-family: Montserrat, sans-serif; font-size: 180%; z-axis: 5;"></span>
 
-      <div class ="row">
+      <div class ="row" >
         <div id="turnos">
           <p style='color: #f4511e; font-family: Montserrat, sans-serif; font-size: 150%;'></p>
         </div>
