allie's changes 9:30pm

--- a/firstPg.html
+++ b/firstPg.html
@@ -1,5 +1,5 @@
 <html>
-	<head>
+  <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
@@ -11,17 +11,29 @@
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
 
-		<link rel="stylesheet" type="text/css" href="siteStyle.css">
-	</head>
+    <link rel="stylesheet" type="text/css" href="siteStyle.css">
+  </head>
    <body>
       <div id="top" class="header">
         <h1>Welcome to Tsuro!</h1>
         <br></br>
-        <div id="instr" style="text-align:left">
-          <p>1) Enter your name</p>
-          <p>2) Select your player color</p>
-          <p>3) Hit submit</p> 
-          <p>4) After hitting submit wait for all players to join before continuing to the next step in the game</p> 
+        <button type="button" class="btn btn-default" data-toggle="collapse" data-target="#instr">how to play</button>
+        <div id="instr" class="collapse" style="text-align:left">
+          <p> </p>
+          <h3>Steps before starting the game:</h3>
+          <p>     1) Enter your name</p>
+          <p>     2) Select your player color</p>
+          <p>     3) Hit submit</p> 
+          <p>     4) After hitting submit wait for all players to join before continuing to the next step in the game</p> 
+          <p>     5) Once all users are present, hit "All Users Present. Let's Play!" </p>
+          <p> </p>
+          <h3> Once you are on the game page: </h3>
+          <p>     1) Click where you want your player to start. Your starting space must be one of the tick marks along the perimeter of the board.</p> 
+          <p>     2) Click multiple times for him to switch tick marks or click another square to switch completely.</p> 
+          <p>     3) When done, wait for time to expire and then let the game begin!</p> 
+          <p>     4) Pick tiles from your hand and play them, remembering the goal to stay on a path and not be pushed off the board. Tiles can be roated once placed on the board by clicking on the tile.</p>
+          <p>     5) Once a player is pushed of the edge, both players are notified of the results of the game and the game is ended.</p>
+          <p> Good luck and have fun! </p>
         </div>
       </div>
 
